# ada_rust_programs

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile
Ada/access/: date_caller.adb  dates.ads
Ada/array/: b__naturaly.adb  b__naturaly.ads  day_case.adb  greet.adb  natural.adb.stderr  naturaly  naturaly.adb.stderr  runtime_err_bound.adb  show_days.adb  workload.adb
Ada/intro_to_types/: book-additional.ads  book.adb  book.ads  check_positive.adb  compute_recursive.adb  enumeration.adb  float_demo.adb  integer_type.adb  lib_addition.adb  operation.adb  week.ads  week_caller.adb
Ada/records/: b__date_caller.adb  b__date_caller.ads  dates.adb  dates.ads  records_ex.adb
Ada/records2/: main.adb  runtime_length.ads  var_size_record.ads  variant_record_caller.adb  variant_records.ads
Ada/src/: adding.adb  book_caller.adb  compute_recursive  greetings.adb  no_overflow.adb  swap.adb  (+6 more)
Rust_to_Ada/ada_adder/: Cargo.toml  adder_code.asm  build.rs  output-graph.dot  output-graph.mir  output-mir.mir  output.mir  vgcore.10750  vgcore.12251  vgcore.182869  vgcore.29309  vgcore.31086  vgcore.33009  vgcore.7022
Rust_to_Ada/ada_adder/adder/: adder.gpr  alire.toml
Rust_to_Ada/ada_adder/adder/src/: adder.adb  adder.ads
Rust_to_Ada/ada_adder/src/: main.rs
bbqueue/: README.md  bbqueue.gpr  compile.sh  main  main.adb
normal_bbq/: Cargo.toml
print_enum/: alire.toml
src/: adding.bexch  addition.bexch  check_positive  check_positive.ali  gmain.bexch  greet5a.adb  greet5b.adb  greetings.ads  odd_even  odd_even.ali
swap_ada/: main.adb
swap_enum/: swap_enum.gpr
(+477 files in other folders)
