[package]
name = "ada_adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
gpr = { git = "https://github.com/jklmnn/gpr-rust", branch = "alire" }

#lib]
#name = "adder"
#rate-type = ["cdylib"]
#path = "adder/lib/libadder.so"
